opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/css/opal.css
/* ... */
.gwt-MenuBarPopup .gwt-MenuItem {
  padding: 4px 15px;
  text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);
  color:#333;
}

.gwt-MenuBarPopup .gwt-MenuItem-disabled {
    color: #C0C0C0;
}

.gwt-MenuBarPopup .gwt-MenuItem-selected,
.gwt-MenuBarPopup .subMenuIcon-selected {
    background: none repeat scroll 0 0 #F3F4EB;
    color: #000;
}

.gwt-MenuBar-vertical .gwt-MenuItemSeparator {
  padding: 0;
}

.gwt-MenuBar-vertical .gwt-MenuItemSeparator .menuSeparatorInner {
    background: none repeat scroll 0 0 transparent;
    border-color: #ddd;
}

.gwt-DisclosurePanel .header {
  padding-left: 16px;
}
.gwt-DisclosurePanel-closed .header {
  background: url(../image/more.png) no-repeat left center;
}
.gwt-DisclosurePanel-open .header {
  background: url(../image/less.png) no-repeat left center;
}

.gwt-DisclosurePanel .content {
  border: none;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelTab {
  background:none repeat scroll 0 0 #888888;
  color: #ffffff;
  font-weight:normal;
  -moz-border-radius-topleft: 0.5em; -webkit-border-top-left-radius: 0.5em; 
  -moz-border-radius-topright: 0.5em; -webkit-border-top-right-radius: 0.5em;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelTab.gwt-TabLayoutPanelTab-selected {
  background:none repeat scroll 0 0 #402817;
  font-weight:normal;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelContent {
  border-color:#BBBBBB;
  border-width:1px 0 0 1px;
}

.gwt-SplitLayoutPanel-HDragger {
  background-color: #B4A291;
}

.gwt-SuggestBoxPopup {
  z-index: 10000;
}

.gwt-PasswordTextBox,.gwt-TextBox,.gwt-TextArea,.gwt-ListBox,.gwt-SuggestBox {
    margin-bottom: 4px;
}

/* Popup */ 

.gwt-PopupPanel {
  border:0.4em solid #DDDDDD;
  border-radius: 0.5em;-moz-border-radius: 0.5em; -webkit-border-radius: 0.5em;
  z-index: 10000;
}

.notification {
  border:0.4em solid #222222;
  background-color: #222222;
  opacity: 0.9;
  color:#ffffff;
  border-radius: 0.5em;-moz-border-radius: 0.5em; -webkit-border-radius: 0.5em;
  float:right;
}

.notification.error {
  border-color:#8d0000;
  background-color: #8d0000;
}

.notification .header {
  font-weight:bold;
}

.notification .main {
  padding:0.5em;
}

.notification a, .notification a:visited, .notification a:hover {
    color:#ffffff;
    text-decoration: none;
}

/* DialogBox */

.gwt-DialogBox, .gwt-PopupPanelGlass {
    z-index: 1000;
}

.gwt-DialogBox > div:first-child {
  -webkit-border-radius:6px;
  -moz-border-radius:6px;
  border-radius:6px;
  -webkit-box-shadow:0 3px 7px rgba(0, 0, 0, 0.8);
  -moz-box-shadow:0 3px 7px rgba(0, 0, 0, 0.8);
  box-shadow:0 3px 7px rgba(0, 0, 0, 0.8)
}

.gwt-DialogBox .Caption {
  background: none repeat scroll 0 0 #F5F5F5;
  border-top: medium none;
  color: #404040;
  font-size: 1.4em;
  font-weight: bold;
  line-height: 30px;
  -webkit-border-radius: 6px 6px 0 0;
  -moz-border-radius: 6px 6px 0 0;
  border-radius: 6px 6px 0 0;
  border-left: 1px solid #888888;
  border-right: 1px solid #888888;
  border-top: 1px solid #888888;
  padding-left: 0.8em;
  padding-right: 0.8em;
  -webkit-box-shadow: 0 1px 0 #FFFFFF inset;
  -moz-box-shadow: 0 1px 0 #FFFFFF inset;
  box-shadow: 0 1px 0 #FFFFFF inset;
  -moz-text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
  -webkit-text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

.gwt-DialogBox .dialogMiddleCenter {
  padding:0px;
  -webkit-border-radius: 0 0 6px 6px;
  -moz-border-radius: 0 0 6px 6px;
  border-radius: 0 0 6px 6px;
  border-left: 1px solid #888888;
  border-right: 1px solid #888888;
  border-bottom: 1px solid #888888;
}

.gwt-DialogBox .dialogContent .main {
  padding:0.8em;
}

.gwt-DialogBox .dialogContent .main .p {
  line-height: 1.6em;
}

.gwt-DialogBox .dialogBottomCenter,
.gwt-DialogBox .dialogMiddleRight,
.gwt-DialogBox .dialogMiddleLeft,
.gwt-DialogBox .dialogTopRight,
.gwt-DialogBox .dialogTopLeft,
.gwt-DialogBox .dialogBottomRight,
.gwt-DialogBox .dialogBottomLeft {
  background: none;
  display: none;
}

.gwt-DialogBox .dialogContent .footer {
  background-color:#F3F4EB;
  border-top:1px solid #B4A291;
  -webkit-border-radius: 0 0 6px 6px;
  -moz-border-radius: 0 0 6px 6px;
  border-radius: 0 0 6px 6px;
  -webkit-box-shadow: 0 1px 0 #FFFFFF inset;
  -moz-box-shadow: 0 1px 0 #FFFFFF inset;
  box-shadow: 0 1px 0 #FFFFFF inset;
}

.gwt-DialogBox .dialogContent .footer .gwt-Button,
.gwt-DialogBox .dialogContent .footer .btn {
  margin-right:0.8em;
}

.gwt-DialogBox .dialogContent .footer span {
  margin-left:0.8em;
}

/* CellTable */

.table, .grid {
}

.gwt-CellTable td span,
td.row-actions span {
  margin-right: 0.5em;
  cursor: pointer;
  text-decoration: underline;
}

.table .empty-label,
.grid .empty-label {
  padding: 4px 15px;
  float: left;
  text-decoration: none;
}

/* Login */

.login {
  position:absolute; 
  top:50%; 
  left:50%;
}

.login .content {
   border: 1px solid #999;
   background-color: #ffffff;   
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   position:absolute; 
   top:-10em; 
   left:-10em;
   -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.3); 
   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.3);
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.3);
}

.login .title {
  background-color: #F3F4EB;
  border-bottom: 1px solid #ddd;
  -moz-border-radius: 5px 5px 0 0;
  -webkit-border-radius: 5px 5px 0 0;
  border-radius: 5px 5px 0 0;
  color: #444;
  font-size: 1.8em;
  font-weight: bold;
  padding: 12px 24px;
  -webkit-text-shadow:0 1px 1px rgba(0, 0, 0, 0.2);
  -moz-text-shadow:0 1px 1px rgba(0, 0, 0, 0.3);
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

.login .alert-message.block-message {
  padding: 0.8em;
}

.login .form {
   margin: 12px 24px;
   background-color: #fff;	
}

/* Network Notification */ 

.network-notification .title {
  font-weight: bold; 
  font-size:1.2em;
}

.network-notification .message {
  color: black; 
  font-style:italic;
}
/* ... */

